# echo-bot-rs

./: .gitignore  Cargo.toml  README.md
config/: settings.template.yaml
src/: config.rs  console_bot.rs  lib.rs  logger.rs  main.rs  telegram_bot.rs
src/telegram_bot/: api_client.rs  api_methods.rs  api_types.rs  domain_types.rs  error.rs
