[package]
name = "echo-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
serde_yaml = "0.9.14"
ureq = {version = "2.5.0", features = ["json", "charset"]}
